footer links added

--- a/index.html
+++ b/index.html
@@ -1696,64 +1696,73 @@
               </div>
               <div class="footer-grid">
                 <div class="footer-grid-links">
-                  <h3 class="footer-text-item-title">Why Scissor ?</h3>
-                  <p class="footer-text-item-description">Scissors 101</p>
-                  <p class="footer-text-item-description">Integrations & API</p>
-                  <p class="footer-text-item-description">Pricing</p>
+                  <h3>Why Scissor ?</h3>
+                  <ul>
+                    <li><a href="#">Scissors 101</a></li>
+                    <li><a href="#">Integrations & API</a></li>
+                    <li><a href="#">Pricing</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Solutions</h3>
-                  <p class="footer-text-item-description">Social Media</p>
-                  <p class="footer-text-item-description">Digital Marketing</p>
-                  <p class="footer-text-item-description">Customer Service</p>
-                  <p class="footer-text-item-description">For Developers</p>
+                <div class="footer-grid-links">
+                  <h3>Solutions</h3>
+                  <ul>
+                    <li><a href="#">Social Media</a></li>
+                    <li><a href="#">Digital Marketing</a></li>
+                    <li><a href="#">Customer Service</a></li>
+                    <li><a href="#">For Developers</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Products</h3>
-                  <p class="footer-text-item-description">Link Management</p>
-                  <p class="footer-text-item-description">QR Codes</p>
-                  <p class="footer-text-item-description">Link-in-bio</p>
+                <div class="footer-grid-links">
+                  <h3>Products</h3>
+                  <ul>
+                    <li><a href="#">Link Management</a></li>
+                    <li><a href="#">QR Codes</a></li>
+                    <li><a href="#">Link-in-bio</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Company</h3>
-                  <p class="footer-text-item-description">About Scissors</p>
-                  <p class="footer-text-item-description">Careers</p>
-                  <p class="footer-text-item-description">Partners</p>
-                  <p class="footer-text-item-description">Press</p>
-                  <p class="footer-text-item-description">Contact</p>
-                  <p class="footer-text-item-description">Reviews</p>
+                <div class="footer-grid-links">
+                  <h3>Company</h3>
+                  <ul>
+                    <li><a href="#">About Scissors</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Reviews</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Resources</h3>
-                  <p class="footer-text-item-description">Blog</p>
-                  <p class="footer-text-item-description">Resource Library</p>
-                  <p class="footer-text-item-description">Developers</p>
-                  <p class="footer-text-item-description">App Connectors</p>
-                  <p class="footer-text-item-description">Support</p>
-                  <p class="footer-text-item-description">Trust Center</p>
-                  <p class="footer-text-item-description">Browser Extension</p>
-                  <p class="footer-text-item-description">Mobile App</p>
+                <div class="footer-grid-links">
+                  <h3>Resources</h3>
+                  <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Resource Library</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <li><a href="#">App Connectors</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Trust Center</a></li>
+                    <li><a href="#">Browser Extension</a></li>
+                    <li><a href="#">Mobile App</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Features</h3>
-                  <p class="footer-text-item-description">Branded Links</p>
-                  <p class="footer-text-item-description">Mobile Links</p>
-                  <p class="footer-text-item-description">Campaign</p>
-                  <p class="footer-text-item-description">
-                    Management and Analytics
-                  </p>
-
-                  <p class="footer-text-item-description">QR Code generator</p>
+                <div class="footer-grid-links">
+                  <h3>Features</h3>
+                  <ul>
+                    <li><a href="#">Branded Links</a></li>
+                    <li><a href="#">Mobile Links</a></li>
+                    <li><a href="#">Campaign</a></li>
+                    <li><a href="#">Management and Analytics</a></li>
+                    <li><a href="#">QR Code generator</a></li>
+                  </ul>
                 </div>
-                <div class="footer-text-item">
-                  <h3 class="footer-text-item-title">Legal</h3>
-                  <p class="footer-text-item-description">Privacy Policy</p>
-                  <p class="footer-text-item-description">Cookies Policy</p>
-                  <p class="footer-text-item-description">Terms of Service</p>
-                  <p class="footer-text-item-description">
-                    Acceptable Use Policy
-                  </p>
-                  <p class="footer-text-item-description">Code of Conduct</p>
+                <div class="footer-grid-links">
+                  <h3>Legal</h3>
+                  <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookies Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Acceptable Use Policy</a></li>
+                    <li><a href="#">Code of Conduct</a></li>
+                  </ul>
                 </div>
               </div>
             </div>
